--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,40 +3,68 @@
   font-weight: 400;
   font-style: normal;
 }
+.michroma-regular {
+  font-family: "Michroma", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+*{
+  font-family: "Michroma", sans-serif;
+}
 header{
-    background-color:darksalmon;
+    background-color:gold;
     padding: 5px 10px;
-    max-height: 35px;
+    margin: 10px;
+    border-radius: 20px;
+    text-align: center;
+    border: 2px;
 }
 
 .contenedor{
-    
-}
-
-header h2{
-    padding-left: 5px;
-}
-
-header p{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    max-width: 60px;  
-}
-main{
-    padding: 20px;
-    background-color:coral;
+    display: inline-block;
+    color: white;
 }
 
 h1{
     font-family: 'Meie Script';
-    color: white;
+    color: black;
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
     margin-top: 30px;
-    background-color:rgb(142, 31, 31);
 }
 
-main h2{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-    font-weight: lighter;
+main{
+    /* padding: 20px; */
+    background-color:rgb(255, 255, 255);
+    font-size: 18px;
+    text-align: center;
+    font-family: "Michroma", sans-serif;
+    font-weight: 400;
 }
+
+.hero{
+    background-image:url(../img/hambfondo.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 900px;
+    padding: 20px 10px;
+    text-align: center;
+    justify-content: center;
+    border: 5px;
+    border-radius: 8px;
+    border-color: white;
+}
+
+
+
+/* .burgas{
+    margin-top: 15px;
+}
+
+.pizzas{
+    margin-top: 15px;
+}
+
+.papas{
+    margin-top: 15px;
+} */
